finish article part again
